<resources>

    <!-- Headers Options -->
    <string name="app_name">Parsler</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_dashboard">Active Orders</string>
    <string name="title_activity_order_summary">Summary</string>
    <string name="title_activity_notification">Messages</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_signature">Signature</string>
    <string name="title_activity_exception">Ooooopsss!</string>

    <!-- Settings Options -->
    <string name="action_settings">Settings</string>
    <string name="action_notifications">Notification</string>
    <string name="call_manager">Contact Manager</string>
    <string name="action_logout">Logout</string>

    <!-- Global Messages -->
    <string name="no_internet_connection">No Internet Connection</string>

    <!-- Login -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="signin">Sign In</string>

    <!-- Dashboard -->
    <string name="pickup_header">Parsler - </string>
    <string name="pickup_loc">Pickup Location</string>
    <string name="drop_loc">Drop Location</string>
    <string name="status">Status - </string>
    <string name="on_duty">On Duty</string>
    <string name="success">Success</string>
    <string name="failed">Failed</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="no_active_order">You have no active orders currently. Stay Tuned!</string>
    <string name="no_history_order">No orders have been completed yet.</string>
    <string name="no_messages">You have no received messages. Stay Tuned!</string>
    <string name="something_broke">Oooopss! Something Broke. Please try again later.</string>

    <!-- Order Summary -->
    <string name="call">Call</string>
    <string name="navigate">Navigate</string>
    <string name="complete">Complete</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="call_merchant">Contact Merchant</string>
    <string name="payment">Payment</string>
    <string name="cod">Cash on Delivery</string>
    <string name="prepaid">Prepaid</string>
    <string name="payment_collect">Please collect the payment at</string>
    <string name="payment_received">Payment Received</string>
    <string name="payment_complete">Click here when payment received.</string>
    <string name="pickupETA">Estimated time of arrival - </string>
    <string name="dropETA">Estimated time of delivery - </string>

    <!-- Profile -->
    <string name="helptext">Please contact your manager for any change in the above information</string>
    <string name="profile_contact">Contact - </string>

    <!-- Digital Signature -->
    <string name="checkpoint_complete">Checkpoint Complete</string>


    <!-- Notifications -->
    <string name="notification_assigned">New pickup has been assigned to you. Kindly see the pickup and drop details.</string>
    <string name="notification_helptext">Tap on this message to read more details.</string>
    <string name="notification_header">Messages - </string>


    <!-- Dialog -->
    <string name="dialog_header">Checkpoint Reached</string>
    <string name="dialog_cancellation_header">Cancel Order</string>
    <string name="dialog_confirmation">Are you sure this step has been done successfully?</string>
    <string name="dialog_cancellation_confirmation">Are you sure you want to cancel the order?</string>
    <string name="cancel">Cancel</string>


    <!-- Navigation Menu -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="onduty">Online</string>

    <!-- Exception -->
    <string name="go_to_homepage">Go to Homepage</string>

</resources>
